Added command line args